<resources>
    <string name="app_name">Reservation</string>
    <string name="name">Name:</string>
    <string name="phone">Mobile No:</string>
    <string name="size">Size:</string>
    <string name="Smoke">Smoking</string>
    <string name="reset">Reset</string>
    <string name="day">Click here to select day</string>
    <string name="time">Click here to select time</string>
    <string name="reserve">Reserve</string>
</resources>